<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.AddStoryActivity">

    <data>
        <variable
            name="vm"
            type="co.mbznetwork.storyapp.viewmodel.AddStoryViewModel" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_story_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_no_image"
            app:layout_constraintDimensionRatio="H,16:9"
            android:scaleType="centerCrop"
            android:contentDescription="@string/story_photo"
            inputBitmap="@{vm.photoBitmap}"/>

        <Button
            android:id="@+id/btn_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo"
            app:layout_constraintTop_toBottomOf="@id/iv_story_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableStart="@drawable/ic_upload"
            android:drawablePadding="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_photo"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="8dp"
            android:hint="@string/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="4"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_enable_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enable_location"
            app:layout_constraintTop_toBottomOf="@id/til_description"
            app:layout_constraintStart_toStartOf="@id/til_description"
            app:layout_constraintEnd_toEndOf="@id/til_description"
            android:layout_marginTop="12dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/til_description"
            app:layout_constraintTop_toTopOf="@id/tv_enable_location"
            app:layout_constraintBottom_toBottomOf="@id/tv_enable_location"
            android:checked="@{vm.userLocation != null}"/>

        <View
            android:id="@+id/btn_enable_location"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/switch_location"
            app:layout_constraintEnd_toEndOf="@id/switch_location"
            app:layout_constraintStart_toStartOf="@id/switch_location"
            app:layout_constraintBottom_toBottomOf="@id/switch_location"
            android:onClick="@{() -> vm.toggleUserLocation()}"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/switch_location"
            app:layout_constraintBottom_toTopOf="@id/button_add"
            android:visibility="@{vm.userLocation == null ? View.INVISIBLE : View.VISIBLE}"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="?android:attr/colorPrimary"
            android:layout_marginTop="8dp"
            android:text="@string/upload"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
